samples/_failures_safe/1761429921_e2f1f1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cf1dc194.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_cf1dc194.c:154:43: error: missing terminating " character
  154 |             case TOKEN_STRING: type_str = "STRING
      |                                           ^~~~~~~
./samples/SAFE/__tmp_cf1dc194.c:154:13: error: expected expression at end of input
  154 |             case TOKEN_STRING: type_str = "STRING
      |             ^~~~
./samples/SAFE/__tmp_cf1dc194.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cf1dc194.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cf1dc194.c:154:13: error: expected declaration or statement at end of input
